--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -1,1 +1,4 @@
-<h1>THIS IS THE PORTFOLIO</h1>
+<h1>THIS IS THE GALLERY</h1>
+<% 25.times do |i| %>
+<img src="https://unsplash.it/200/300?random=<%=i%>">
+<% end %>
